--- a/resumo.html
+++ b/resumo.html
@@ -70,7 +70,7 @@ input,select{width:100%;padding:12px;border-radius:14px;border:1px solid #ccc}
 
   <div class="block">
     <label>⏱️ Tempo de espera (min)</label>
-    <input type="number" id="tempoEspera" placeholder="Ex: 10">
+    <input type="number" id="tempoEspera" placeholder="Ex: 8">
   </div>
 
   <div class="block">
@@ -122,59 +122,72 @@ if(usuario.tipo==="motorista"){
 }
 
 function calcular(){
-  let total=valorBase;
-  let d=[];
+  let total = valorBase;
+  let detalhes = [];
 
-  d.push(`🚖 *Viagem base*: R$ ${valorBase.toFixed(2)}`);
+  detalhes.push(`🚖 Viagem base: R$ ${valorBase.toFixed(2)}`);
 
   if(Dinamico?.ativo){
-    const v=valorBase*(Dinamico.multiplicador-1);
-    total+=v; d.push(`⚡ *Tarifa dinâmica*: +R$ ${v.toFixed(2)}`);
+    const v = valorBase * (Dinamico.multiplicador - 1);
+    total += v;
+    detalhes.push(`⚡ Tarifa dinâmica: +R$ ${v.toFixed(2)}`);
   }
 
-  if(tipoViagem.value!=="ida"){
-    const v=tipoViagem.value==="bate_volta"?valorBase*0.8:
-            tipoViagem.value==="ida_volta"?valorBase:
-            (valorBase*2*0.1)+valorBase;
-    total+=v; d.push(`♻️ *Tipo de viagem*: +R$ ${v.toFixed(2)}`);
+  if(tipoViagem.value !== "ida"){
+    const v =
+      tipoViagem.value === "bate_volta" ? valorBase * 0.8 :
+      tipoViagem.value === "ida_volta" ? valorBase :
+      (valorBase * 2 * 0.1) + valorBase;
+
+    total += v;
+    detalhes.push(`♻️ Tipo de viagem: +R$ ${v.toFixed(2)}`);
   }
 
-  if(desvioSimples.checked){total+=Taxas.desvioRotaSimples;d.push(`🛣️ *Desvio simples*: +R$ ${Taxas.desvioRotaSimples.toFixed(2)}`);}
-  if(voltaPraia.checked){total+=Taxas.voltaPraia;d.push(`🏖️ *Volta da praia*: +R$ ${Taxas.voltaPraia.toFixed(2)}`);}
-  if(taxaFeira.checked){total+=Taxas.feira;d.push(`🧺 *Taxa de feira*: +R$ ${Taxas.feira.toFixed(2)}`);}
+  if(desvioSimples.checked){ total+=Taxas.desvioRotaSimples; detalhes.push(`🛣️ Desvio simples: +R$ ${Taxas.desvioRotaSimples.toFixed(2)}`); }
+  if(voltaPraia.checked){ total+=Taxas.voltaPraia; detalhes.push(`🏖️ Volta da praia: +R$ ${Taxas.voltaPraia.toFixed(2)}`); }
+  if(taxaFeira.checked){ total+=Taxas.feira; detalhes.push(`🧺 Taxa de feira: +R$ ${Taxas.feira.toFixed(2)}`); }
 
-  const animal=Number(document.getElementById("animal").value||0);
-  if(animal>0){total+=animal;d.push(`🐶 *Transporte animal*: +R$ ${animal.toFixed(2)}`);}
+  const animal = Number(document.getElementById("animal").value || 0);
+  if(animal > 0){
+    total += animal;
+    detalhes.push(`🐶 Transporte de animal: +R$ ${animal.toFixed(2)}`);
+  }
 
-  const espera=Number(document.getElementById("tempoEspera").value||0);
-  if(espera>0){const v=espera*1; total+=v; d.push(`⏱️ *Tempo de espera*: +R$ ${v.toFixed(2)}`);}
+  const minutos = Number(document.getElementById("tempoEspera").value || 0);
+  if(minutos >= 5){
+    const esperaValor = 3 + (minutos - 5) * 0.6;
+    total += esperaValor;
+    detalhes.push(`⏱️ Tempo de espera (${minutos} min): +R$ ${esperaValor.toFixed(2)}`);
+  }
 
-  const extra=Number(document.getElementById("desvioExtra").value||0);
-  if(extra>0){total+=extra; d.push(`➕ *Desvio adicional*: +R$ ${extra.toFixed(2)}`);}
+  const extra = Number(document.getElementById("desvioExtra").value || 0);
+  if(extra > 0){
+    total += extra;
+    detalhes.push(`➕ Desvio adicional: +R$ ${extra.toFixed(2)}`);
+  }
 
-  detalhamento.innerHTML=d.map(l=>`<div>${l}</div>`).join("");
-  totalDiv.innerText=`R$ ${total.toFixed(2)}`;
-  App.set("total",total);
-  window.__whats=d;
+  detalhamento.innerHTML = detalhes.map(l=>`<div>${l}</div>`).join("");
+  totalDiv.innerText = `R$ ${total.toFixed(2)}`;
+  App.set("total", total);
+  window.__detalhesWhats = detalhes;
 }
 
 document.querySelectorAll("input,select").forEach(e=>e.addEventListener("change",calcular));
 calcular();
 
-btnWhats.onclick=()=>{
-  const msg=`🚖 *RF DRIVER – RECIBO de viagem*
+btnWhats.onclick = ()=>{
+  const msg =
+`🚖 RF DRIVER – RECIBO
 
-📌 *Origem*: ${origem}
-🏁 *Destino*: ${destino}
+Origem: ${origem}
+Destino: ${destino}
 
-*Detalhamento*
-${window.__whats.join("\n")}
+${window.__detalhesWhats.join("\n")}
 
-💰 *Total*: R$ ${App.get("total").toFixed(2)}
+Total: R$ ${App.get("total").toFixed(2)}
 
-${assinatura.innerText}
+${assinatura.innerText}`;
 
-Conforto, segurança e transparência.`;
   window.open("https://wa.me/?text="+encodeURIComponent(msg),"_blank");
 };
 </script>
