--- a/resumo.html
+++ b/resumo.html
@@ -192,21 +192,21 @@ btnWhats.onclick = () => {
 
   const assinaturaTexto =
     usuario.tipo === "admin"
-      ? `ADMINISTRADOR ${usuario.nome}`
-      : `MOTORISTA ${usuario.nome}
-Veículo: ${usuario.modelo}
-Placa: ${usuario.placa}
-CPF: ${usuario.cpfMascarado}`;
+      ? `*ADMINISTRADOR* ${usuario.nome}`
+      : `*MOTORISTA* ${usuario.nome}
+*Veículo:* ${usuario.modelo}
+*Placa:* ${usuario.placa}
+*CPF:* ${usuario.cpfMascarado}`;
 
   const msg =
-`🚖 RF DRIVER – RECIBO de Viagem
+`*🚖 RF DRIVER – RECIBO de Viagem*
 
-📌Origem: ${origem}
-🏁Destino: ${destino}
+*Origem:* ${origem}
+*Destino:* ${destino}
 
 ${window.__detalhesWhats.join("\n")}
 
-Total: R$ ${total.toFixed(2)}
+*Total:* R$ ${total.toFixed(2)}
 
 ${assinaturaTexto}`;
 
