--- a/admin-painel.html
+++ b/admin-painel.html
@@ -137,13 +137,19 @@ button:active{
 <script src="core/admins.js"></script>
 
 <script>
-/* ================= AUTO-REDIRECT SE JÁ LOGADO ================= */
+/* ================= AUTO-REDIRECT ================= */
+
+// 🔒 Admin não pode coexistir com usuarioRF
+localStorage.removeItem("usuarioRF");
+
 const adminLogado = JSON.parse(localStorage.getItem("adminRF"));
+
 if(adminLogado && adminLogado.tipo === "admin"){
   window.location.href = "dashboard-admin.html";
 }
 
 /* ================= LOGIN ================= */
+
 const usuarioInput = document.getElementById("usuario");
 const senhaInput = document.getElementById("senha");
 const erro = document.getElementById("erro");
@@ -179,9 +185,10 @@ function loginAdmin(){
     return;
   }
 
+  // 🔒 Garante sessão exclusiva
+  localStorage.removeItem("usuarioRF");
   localStorage.setItem("adminRF", JSON.stringify(admin));
 
-  // DESTINO CORRETO
   window.location.href = "dashboard-admin.html";
 }
 </script>
