--- a/login-passageiro.html
+++ b/login-passageiro.html
@@ -132,8 +132,8 @@ button:active{
 <script>
 /* ⚠️ INSERIR AQUI SUA URL E SUA ANON KEY DO SUPABASE */
 const supabaseClient = supabase.createClient(
-  "SUA_URL_AQUI",
-  "SUA_ANON_KEY_AQUI"
+  "https://msnqiiwcityikslikbow.supabase.co",
+  "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Im1zbnFpaXdjaXR5aWtzbGlrYm93Iiwicm9sZSI6ImFub24iLCJpYXQiOjE3Njc3MDM5OTgsImV4cCI6MjA4MzI3OTk5OH0.0KyaSuL5At4_Cfa4TOM7kvvkVYv-gmR2sb7vX6VHkaU"
 );
 </script>
 
